# travelTools

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CONTAINER_SUMMARY.md  Dockerfile  Dockerfile.dev  Dockerfile.test  IMPLEMENTATION_SUMMARY.md  Makefile  PODMAN_GUIDE.md  QUICKSTART.md  README.md  README_ENV.md  README_PODMAN.md  docker-compose.yml  mypy.ini  podman-build.sh  podman-compose.yml  podman-run.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_scrape.sh  setup.sh  verify_installation.py
config/: destinations.json  settings.json
outputs/: index.html
src/travel_tools/: __init__.py  launcher.py  prompts.py  step1_filter.py  step2_5_summarize.py  step2_scrape.py  step3_5_normalize.py  step3_merge.py  step4_generate_web.py  types.py
src/travel_tools/utils/: __init__.py  file_ops.py  logger.py  validators.py
tests/: __init__.py  conftest.py
tests/unit/: test_file_ops.py  test_filter.py  test_generate_web.py  test_merge.py  test_normalize.py  test_prompts.py  test_review_models.py  test_scrape.py  test_step4_cli.py  test_summarize.py  test_validators.py
web_client/: index.html  package-lock.json  package.json  test_output.txt  tsconfig.json  tsconfig.node.json  vite.config.ts
web_client/coverage/: clover.xml  coverage-final.json  index.html
web_client/coverage/src/: App.vue.html  index.html  main.ts.html  types.ts.html
web_client/src/: App.vue  main.ts  style.css  types.ts
web_client/src/__tests__/: App.spec.ts  HotelFilters.spec.ts  HotelTable.spec.ts  setup.ts  types.spec.ts  useHotels.spec.ts
(+12 files in other folders)
