[project]
name = "travel-tools"
version = "0.1.0"
description = "Hotel package research pipeline"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
    "pydantic>=2.5.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "tenacity>=8.2.3",
    "google-generativeai>=0.3.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-playwright>=0.4.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.7.0",
    "black>=23.12.0",
    "ruff>=0.1.8"
]

[project.scripts]
travel-tools = "travel_tools.launcher:main"
tt-filter = "travel_tools.step1_filter:main"
tt-scrape = "travel_tools.step2_scrape:main"
tt-summarize = "travel_tools.step2_5_summarize:main"
tt-merge = "travel_tools.step3_merge:main"
tt-generate-web = "travel_tools.step4_generate_web:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=travel_tools --cov-report=html --cov-report=term"
